fix md-text-wrap bug

--- a/src/styles/descriptionSection.css
+++ b/src/styles/descriptionSection.css
@@ -108,7 +108,3 @@ h3 {
     align-items: center;
     justify-content: center;
 }
-
-#htmlData p{
-    white-space: pre-wrap;
-}
